--- a/index.html
+++ b/index.html
@@ -420,17 +420,16 @@
            </div>
            <div class="col span-1-of-2">
                <ul class="social-links">
-                   <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-                   <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-                   <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
-                   <li><a href="#"><i class="ion-social-instagram"></i></a></li>
-                   <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
+                   <li><a href="https://www.facebook.com/isumitsr/" target="_blank"><i class="ion-social-facebook"></i></a></li>
+                   <li><a href="https://twitter.com/isumitsr" target="_blank"><i class="ion-social-twitter"></i></a></li>
+                   <li><a href="https://www.linkedin.com/in/iamsumitc/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
+                   <li><a href="https://www.instagram.com/iamsumitsr/?hl=en" target="_blank"><i class="ion-social-instagram"></i></a></li>
                </ul>
                
            </div>
        </div>
        <div class="row">
-           <p>Copyright &copy; 2020 by Hompick. All rights reserved.</p>
+           <p>Copyright &copy; 2020 by Hompick. All rights reserved.<br>Developed by Sumit &#128512, Launching Soon.</p>
        </div>
    </footer>
 
